--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "object.entries": "^1.0.4",
     "plugin-system": "^0.2.1",
     "sqlite3": "^3.1.9",
+    "stacktrace-parser": "^0.1.4",
     "word-wrap": "^1.2.3"
   }
 }
