--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mu2": "^0.5.21",
     "object.entries": "^1.0.4",
     "plugin-system": "^0.2.1",
+    "request": "^2.81.0",
     "sqlite3": "^3.1.9",
     "stacktrace-parser": "^0.1.4",
     "word-wrap": "^1.2.3"
