Design-level tweaks

--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "makedash",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "makedash.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon -e tmpl,js,css,yaml -i dashboard -i database makedash.js"
   },
   "author": "",
   "license": "ISC",
