Create a query cache, and then prepopulate it with a few group queries, to speed everything up. Not finished.

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongo-trigger": "^0.1.5",
     "mongodb": "^2.2.29",
     "mu2": "^0.5.21",
+    "object-hash": "^1.2.0",
     "object.entries": "^1.0.4",
     "plugin-system": "^0.2.1",
     "request": "^2.81.0",
