--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongodb": "^2.2.29",
     "mu2": "^0.5.21",
     "object.entries": "^1.0.4",
+    "object.values": "^1.0.4",
     "plugin-system": "^0.2.1",
     "request": "^2.81.0",
     "sqlite3": "^3.1.9",
