Start adding try/catch to various places which are called asynchronously but not in promises, so that errors there don't escape to the outside world. Parse such error stacks and display them as internal errors with the nice internal error message.

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "plugin-system": "^0.2.1",
     "request": "^2.81.0",
     "sqlite3": "^3.1.9",
+    "stacktrace-js": "^2.0.0",
     "stacktrace-parser": "^0.1.4",
     "word-wrap": "^1.2.3"
   }
