Allow customising the title of the index page As suggested by k----n, this closes #115; one can now set `main_page_title` in config.yaml, and it's documented in `config.yaml.example` (but commented out)

--- a/config.yaml.example
+++ b/config.yaml.example
@@ -55,3 +55,7 @@ authentication:
     client_id: abababababababababab
     client_secret: cdcdcdcdcdcdcdcdcdccdcdcdccdcdcdcdcdcdcd
     organization: MeasureOSS
+
+# Set the title of the front page of the Measure dashboard.
+# This is optional; if not provided, Measure will choose something sensible.
+# main_page_title: Metrics for our community
